--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,15 @@
 name: rijndael
-description: A starting point for Dart libraries or applications.
+description: A pure Dart implementation of the Rijndael (AES) cipher, supporting multiple block sizes, CBC mode, and various padding schemes.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+homepage: https://github.com/yourusername/rijndael
+repository: https://github.com/yourusername/rijndael
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=2.17.0 <4.0.0'
 
 # Add regular dependencies here.
 dependencies:
+  collection: ^1.18.0
   # path: ^1.8.0
 
 dev_dependencies:
