--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,13 @@
 name: rijndael
 description: A pure Dart implementation of the Rijndael (AES) cipher, supporting multiple block sizes, CBC mode, and various padding schemes.
 version: 1.0.0
-homepage: https://github.com/yourusername/rijndael
-repository: https://github.com/yourusername/rijndael
+homepage: https://github.com/iteng007/rijndael
+repository: https://github.com/iteng007/rijndael
+topics:
+  - crypto
+  - encryption
+  - aes
+  - security
 
 environment:
   sdk: '>=2.17.0 <4.0.0'
